add consumer role support

--- a/docker/templates/unattended_config.json.j2
+++ b/docker/templates/unattended_config.json.j2
@@ -25,7 +25,7 @@
             "transfer_chunk_size_for_parallel_transfer_in_megabytes": 40
         },
         "catalog_provider_hosts": [
-            "{{ IRODS_HOST_NAME }}"
+            "{{ IRODS_CATALOG_PROVIDER_HOST }}"
         ],
         "catalog_service_role": "{{ IRODS_ROLE }}",
         "default_dir_mode": "0750",
