fix service account auth scheme (#8)

--- a/docker/templates/unattended_config.json.j2
+++ b/docker/templates/unattended_config.json.j2
@@ -106,7 +106,7 @@
         "zone_user": "{{ IRODS_ADMIN_USER }}"
     },
     "service_account_environment": {
-        "irods_authentication_scheme": "{{ IRODS_AUTHENTICATION_SCHEME }}",
+        "irods_authentication_scheme": "native",
         "irods_client_server_negotiation": "{{ IRODS_CLIENT_SERVER_NEGOTIATION }}",
         "irods_client_server_policy": "{{ IRODS_CLIENT_SERVER_POLICY }}",
         "irods_connection_pool_refresh_time_in_seconds": 300,
