--- a/docker/templates/unattended_config.json.j2
+++ b/docker/templates/unattended_config.json.j2
@@ -1,26 +1,74 @@
 {
-    "id": "file:///var/lib/irods/configuration_schemas/v3/unattended_installation.json",
-    "$schema": "http://json-schema.org/draft-04/schema#",
     "admin_password": "{{ IRODS_ADMIN_PASS }}",
     "default_resource_directory": "{{ IRODS_RESOURCE_DIRECTORY }}",
-    {# "version": { #}
-        {# "commit_id": "8e4e6eca104b5cfdb5945a3fbc08d96549ea3e7e", #}
-        {# "configuration_schema_version": 3, #}
-        {# "catalog_schema_version": 6, #}
-        {# "irods_version": "4.2.6", #}
-        {# "installation_time": "2019-10-25T11:59:20.890609" #}
-    {# }, #}
-    "resources": [],
+    "default_resource_name": "demoResc",
+    "host_system_information": {
+        "service_account_user_name": "{{ IRODS_SERVICE_ACCOUNT_USER }}",
+        "service_account_group_name": "{{ IRODS_SERVICE_ACCOUNT_GROUP }}"
+    },
+    "service_account_environment": {
+        "irods_client_server_negotiation": "{{ IRODS_CLIENT_SERVER_NEGOTIATION }}",
+        "irods_client_server_policy": "{{ IRODS_CLIENT_SERVER_POLICY }}",
+        "irods_connection_pool_refresh_time_in_seconds": 300,
+        "irods_cwd": "/{{ IRODS_ZONE_NAME }}/home/rods",
+        "irods_default_hash_scheme": "{{ IRODS_DEFAULT_HASH_SCHEME }}",
+        "irods_default_number_of_transfer_threads": 4,
+        "irods_default_resource": "demoResc",
+        "irods_encryption_algorithm": "AES-256-CBC",
+        "irods_encryption_key_size": 32,
+        "irods_encryption_num_hash_rounds": 16,
+        "irods_encryption_salt_size": 8,
+        "irods_home": "/{{ IRODS_ZONE_NAME }}/home/rods",
+        "irods_host": "{{ IRODS_HOST_NAME }}",
+        "irods_match_hash_policy": "compatible",
+        "irods_maximum_size_for_single_buffer_in_megabytes": 32,
+        "irods_port": {{ IRODS_ZONE_PORT }},
+        "irods_server_control_plane_encryption_algorithm": "AES-256-CBC",
+        "irods_server_control_plane_encryption_num_hash_rounds": 16,
+        "irods_server_control_plane_key": "{{ IRODS_CONTROL_PLANE_KEY }}",
+        "irods_server_control_plane_port": {{ IRODS_CONTROL_PLANE_PORT|default(1248) }},
+        "irods_transfer_buffer_size_for_parallel_transfer_in_megabytes": 4,
+        "irods_user_name": "{{ IRODS_ADMIN_USER }}",
+        "irods_zone_name": "{{ IRODS_ZONE_NAME }}",
+        "schema_name": "irods_environment",
+        "schema_version": "v4",
+        {# Unsure if following lines are valid here #}
+
+        {% if IRODS_SSL_CA_CERT_PATH|default(false) %}
+        "irods_ssl_ca_certificate_file": "{{ IRODS_SSL_CA_CERT_PATH }}",
+        {% endif %}
+
+        "irods_ssl_certificate_chain_file": "{{ IRODS_SSL_CERTIFICATE_CHAIN_FILE }}",
+        "irods_ssl_certificate_key_file": "{{ IRODS_SSL_CERTIFICATE_KEY_FILE }}",
+        "irods_ssl_dh_params_file": "{{ IRODS_SSL_DH_PARAMS_FILE }}",
+        "irods_ssl_verify_server": "{{ IRODS_SSL_VERIFY_SERVER }}"
+    },
     "server_config": {
         "advanced_settings": {
             "default_log_rotation_in_days": 5,
             "default_number_of_transfer_threads": 4,
             "default_temporary_password_lifetime_in_seconds": 120,
-            "maximum_number_of_concurrent_rule_engine_server_processes": 4,
+            "delay_rule_executors": [
+                {% if IRODS_CATALOG_PROVIDER_HOST %}
+                "{{ IRODS_CATALOG_PROVIDER_HOST }}"
+                {% else %}
+                "{{ IRODS_HOST_NAME }}"
+                {% endif %}
+            ],
+            "delay_server_sleep_time_in_seconds": 30,
+            "dns_cache": {
+                "eviction_age_in_seconds": 3600,
+                "shared_memory_size_in_bytes": 5000000
+            },
+            "hostname_cache": {
+                "eviction_age_in_seconds": 3600,
+                "shared_memory_size_in_bytes": 2500000
+            },
             "maximum_size_for_single_buffer_in_megabytes": 32,
+            "maximum_size_of_delay_queue_in_bytes": 0,
             "maximum_temporary_password_lifetime_in_seconds": 1000,
-            "rule_engine_server_execution_time_in_seconds": 120,
-            "rule_engine_server_sleep_time_in_seconds": 30,
+            "number_of_concurrent_delay_rule_executors": 4,
+            "stacktrace_file_processor_sleep_time_in_seconds": 10,
             "transfer_buffer_size_for_parallel_transfer_in_megabytes": 4,
             "transfer_chunk_size_for_parallel_transfer_in_megabytes": 40
         },
@@ -32,14 +80,41 @@
             {% endif %}
         ],
         "catalog_service_role": "{{ IRODS_ROLE }}",
+        "client_api_allowlist_policy": "enforce",
+        "controlled_user_connection_list": {
+            "control_type": "denylist",
+            "users": []
+        },
         "default_dir_mode": "0750",
         "default_file_mode": "0600",
         "default_hash_scheme": "{{ IRODS_DEFAULT_HASH_SCHEME }}",
         "default_resource_name": "demoResc",
         "environment_variables": {
+            {# Not sure if this one is supported in 4.3? #}
             "IRODS_DATABASE_USER_PASSWORD_SALT": "{{ IRODS_PASSWORD_SALT }}"
         },
         "federation": [],
+                "host_access_control": {
+            "access_entries": []
+        },
+        "host_resolution": {
+            "host_entries": []
+        },
+        "log_level": {
+            "agent": "info",
+            "agent_factory": "info",
+            "api": "info",
+            "authentication": "info",
+            "database": "info",
+            "delay_server": "info",
+            "legacy": "info",
+            "microservice": "info",
+            "network": "info",
+            "resource": "info",
+            "rule_engine": "info",
+            "server": "info",
+            "sql": "info"
+        },
         "match_hash_policy": "compatible",
         "negotiation_key": "{{ IRODS_NEGOTIATION_KEY }}",
         "plugin_configuration": {
@@ -73,7 +148,7 @@
                         "regexes_for_supported_peps": [
                             "ac[^ ]*",
                             "msi[^ ]*",
-                            "[^ ]*pep_[^ ]*_(pre|post|except)"
+                            "[^ ]*pep_[^ ]*_(pre|post|except|finally)"
                         ]
                     },
                     "shared_memory_instance": "irods_rule_language_rule_engine"
@@ -90,7 +165,7 @@
         ],
         "schema_name": "server_config",
         "schema_validation_base_uri": "file:///var/lib/irods/configuration_schemas",
-        "schema_version": "v3",
+        "schema_version": "v4",
         "server_control_plane_encryption_algorithm": "AES-256-CBC",
         "server_control_plane_encryption_num_hash_rounds": 16,
         "server_control_plane_key": "{{ IRODS_CONTROL_PLANE_KEY }}",
@@ -104,236 +179,5 @@
         "zone_name": "{{ IRODS_ZONE_NAME }}",
         "zone_port": {{ IRODS_ZONE_PORT }},
         "zone_user": "{{ IRODS_ADMIN_USER }}"
-    },
-    "service_account_environment": {
-        "irods_authentication_scheme": "native",
-        "irods_client_server_negotiation": "{{ IRODS_CLIENT_SERVER_NEGOTIATION }}",
-        "irods_client_server_policy": "{{ IRODS_CLIENT_SERVER_POLICY }}",
-        "irods_connection_pool_refresh_time_in_seconds": 300,
-        "irods_cwd": "/{{ IRODS_ZONE_NAME }}/home/rods",
-        "irods_default_hash_scheme": "{{ IRODS_DEFAULT_HASH_SCHEME }}",
-        "irods_default_number_of_transfer_threads": 4,
-        "irods_default_resource": "demoResc",
-        "irods_encryption_algorithm": "AES-256-CBC",
-        "irods_encryption_key_size": 32,
-        "irods_encryption_num_hash_rounds": 16,
-        "irods_encryption_salt_size": 8,
-        "irods_home": "/{{ IRODS_ZONE_NAME }}/home/rods",
-        "irods_host": "{{ IRODS_HOST_NAME }}",
-        "irods_match_hash_policy": "compatible",
-        "irods_maximum_size_for_single_buffer_in_megabytes": 32,
-        "irods_port": {{ IRODS_ZONE_PORT }},
-        "irods_server_control_plane_encryption_algorithm": "AES-256-CBC",
-        "irods_server_control_plane_encryption_num_hash_rounds": 16,
-        "irods_server_control_plane_key": "{{ IRODS_CONTROL_PLANE_KEY }}",
-        "irods_server_control_plane_port": {{ IRODS_CONTROL_PLANE_PORT|default(1248) }},
-
-        {% if IRODS_SSL_CA_CERT_PATH|default(false) %}
-        "irods_ssl_ca_certificate_file": "{{ IRODS_SSL_CA_CERT_PATH }}",
-        {% endif %}
-
-        "irods_ssl_certificate_chain_file": "{{ IRODS_SSL_CERTIFICATE_CHAIN_FILE }}",
-        "irods_ssl_certificate_key_file": "{{ IRODS_SSL_CERTIFICATE_KEY_FILE }}",
-        "irods_ssl_dh_params_file": "{{ IRODS_SSL_DH_PARAMS_FILE }}",
-        "irods_ssl_verify_server": "{{ IRODS_SSL_VERIFY_SERVER }}",
-        "irods_transfer_buffer_size_for_parallel_transfer_in_megabytes": 4,
-        "irods_user_name": "{{ IRODS_ADMIN_USER }}",
-        "irods_zone_name": "{{ IRODS_ZONE_NAME }}",
-        "schema_name": "irods_environment",
-        "schema_version": "v3"
-    },
-    "hosts_config": {
-        "host_entries": [],
-        "schema_name": "hosts_config",
-        "schema_version": "v3"
-    },
-    "host_system_information": {
-        "service_account_user_name": "{{ IRODS_SERVICE_ACCOUNT_USER }}",
-        "service_account_group_name": "{{ IRODS_SERVICE_ACCOUNT_GROUP }}"
-        {# TODO begin #}
-        {# "hostname": "sodar-irods-x" #}
-        {# TODO end #}
-    },
-    "host_access_control_config": {
-        "schema_name": "host_access_control_config",
-        "schema_version": "v3",
-        "access_entries": []
-    },
-    "plugins": [
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "resource",
-            "name": "passthru"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "resource",
-            "name": "univmss"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "resource",
-            "name": "unixfilesystem"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "resource",
-            "name": "random"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "resource",
-            "name": "mockarchive"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "resource",
-            "name": "deferred"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "resource",
-            "name": "nonblocking"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "resource",
-            "name": "replication"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "resource",
-            "name": "load_balanced"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "resource",
-            "name": "roundrobin"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "resource",
-            "name": "structfile"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "resource",
-            "name": "compound"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "authentication",
-            "name": "native_client"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "authentication",
-            "name": "native_server"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "authentication",
-            "name": "pam_server"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "authentication",
-            "name": "osauth_client"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "authentication",
-            "name": "pam_client"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "authentication",
-            "name": "osauth_server"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "network",
-            "name": "ssl_client"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "network",
-            "name": "ssl_server"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "network",
-            "name": "tcp_server"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "network",
-            "name": "tcp_client"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "api",
-            "name": "helloworld_server"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "api",
-            "name": "helloworld_client"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "microservice",
-            "name": "msi_update_unixfilesystem_resource_free_space"
-        },
-        {
-            "version": "",
-            "checksum_sha256": "",
-            "type": "microservice",
-            "name": "msisync_to_archive"
-        }
-    ],
-    "required": [
-        "admin_password",
-        "host_access_control_config",
-        "host_system_information",
-        "hosts_config",
-        "server_config",
-        "service_account_environment"
-    ],
-    "configuration_directory": {
-        "path": "/etc/irods",
-        "files": {
-            "/etc/irods/server.key": "{{ ins_key | b64encode }}",
-            "/etc/irods/server.crt": "{{ ins_crt | b64encode }}",
-            "/etc/irods/core.dvm": "{{ ins_core_dvm | b64encode }}",
-            "/etc/irods/core.re": "{{ ins_core_re | b64encode }}",
-            "/etc/irods/core.fnm": "{{ ins_core_fnm | b64encode }}",
-            "/etc/irods/service_account.config": "{{ ins_service_account_config | b64encode }}"
-        }
     }
 }
