update zone auth and negotiation env vars (#44, #45)

--- a/docker/templates/unattended_config.json.j2
+++ b/docker/templates/unattended_config.json.j2
@@ -153,7 +153,7 @@
         "server_port_range_start": {{ IRODS_DATA_PORT_RANGE_START }},
         "server_port_range_end": {{ IRODS_DATA_PORT_RANGE_END }},
         "xmsg_port": 1279,
-        "zone_auth_scheme": "{{ IRODS_AUTHENTICATION_SCHEME }}",
+        "zone_auth_scheme": "native",
         "zone_key": "{{ IRODS_ZONE_KEY }}",
         "zone_name": "{{ IRODS_ZONE_NAME }}",
         "zone_port": {{ IRODS_ZONE_PORT }},
