fix missing acPostProcForParallelTransferReceived (#63)

--- a/docker/templates/core.py.j2
+++ b/docker/templates/core.py.j2
@@ -325,3 +325,6 @@ def acPreProcForServerPortal(rule_args, callback, rei):
 
 def acPostProcForServerPortal(rule_args, callback, rei):
     pass
+
+def acPostProcForParallelTransferReceived(rule_args, callback, rei):
+    pass
